--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
+    "postcss": "^8.4.32",
     "sass": "^1.60.0",
+    "tailwindcss": "^3.4.0",
     "unplugin-fonts": "^1.0.3",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0"
